# sandbox-glazed

./: .gitignore  .lando.yml  3pd.config.json  LOG.txt  README.md  composer.json  pantheon.upstream.yml   pantheon.yml
.github/workflows/: deploy-pantheon.yml
.lando/: php.ini
3pd-ide/: 3pd.config.json  README.txt  package-lock.json  package.json
3pd-ide/scripts/: inject-and-sync-s3.js
apps/: README.txt
apps/css/: hudx.css
apps/hudx-test-app/: package-lock.json  package.json
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/: Cargo.toml
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/.cargo/: config.toml
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/: lib.rs
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/ast/: c14n.rs  mod.rs
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/cfg/: mod.rs
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/entity/: decode.rs  encode.rs
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/entity/tests/: encode.rs
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/minify/: attr.rs  comment.rs  content.rs  css.rs  doctype.rs  element.rs  js.rs  rcdata.rs
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/minify/tests/: attr.rs
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/parse/: comment.rs  content.rs  doctype.rs  element.rs  instruction.rs  mod.rs  script.rs  style.rs  textarea.rs  title.rs
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/parse/tests/: element.rs
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/tag/: mod.rs
web/modules/contrib/dxpr_builder/rust/dxpr-ai-optimizer/src/tests/: mod.rs
(+2573 files in other folders)
