[package]
name = "dxpr-ai-optimizer"
description = "DXPR HTML optimizer for AI token reduction (based on minify-html)"
license = "MIT"
homepage = "https://github.com/dxpr/dxpr_builder"
keywords = ["html", "compress", "minifier", "ai", "wasm"]
categories = ["compression", "development-tools::build-utils", "web-programming", "wasm"]
repository = "https://github.com/dxpr/dxpr_builder"
version = "0.16.4"
authors = ["DXPR Team", "Wilson Lin <code@wilsonl.in>"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# Core minify-html dependencies
# Use ahash 0.7 to avoid getrandom 0.3 compatibility issues with WASM
ahash = "0.7"
aho-corasick = "0.7"
lightningcss = "1.0.0-alpha.65"
memchr = "2"
minify-html-common = { version = "0.0.2", path = "../minify-html-common" }
minify-js = "0.6"
once_cell = "1.19.0"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development.
console_error_panic_hook = { version = "0.1", optional = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Use getrandom 0.3 with wasm_js feature for WASM builds
# The .cargo/config.toml sets the getrandom_backend flag
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
